Create page to project

--- a/TARge21House/TARge21House/Views/House/Index.cshtml
+++ b/TARge21House/TARge21House/Views/House/Index.cshtml
@@ -8,6 +8,10 @@
     Houses
 </div>
 
+<div>
+    <a asp-action="create" asp-controller="house" type="submit" class="btn btn-primary">Create</a>
+</div>
+
 <form method="post">
     <table class="table table-hover">
         <thead>
