--- a/TARge21House/TARge21House/Views/House/CreateUpdate.cshtml
+++ b/TARge21House/TARge21House/Views/House/CreateUpdate.cshtml
@@ -1,6 +1,12 @@
 ﻿@model TARge21House.Models.House.HouseCreateUpdateViewModel
 
-<h1>Create</h1>
+@if (Model.Id.HasValue)
+{
+    <h1>Update</h1>
+} else
+{
+    <h1>Create</h1>
+}
 
 <div>
     <form method="post" enctype="multipart/form-data">
@@ -43,7 +49,16 @@
             </div>
         </div>
 
-        <input asp-action="create" asp-controller="house" type="submit" class="btn btn-primary" value="Create" />
+        <hr />
+
+        @if (Model.Id.HasValue)
+        {
+            <input asp-action="update" asp-controller="house" type="submit" class="btn btn-primary" value="Update" />
+        } else
+        {
+            <input asp-action="create" asp-controller="house" type="submit" class="btn btn-primary" value="Create" />
+        }
+
         <a asp-action="index" class="btn btn-primary">Back</a>
 
     </form>
